merge from idea widget changes